# jellytui

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
crates/jellyfin-client/: Cargo.toml  README.md
crates/jellyfin-client/src/: error.rs  lib.rs
src/: app.rs  client.rs  config.rs  download.rs  events.rs  images.rs  main.rs  player.rs  ui.rs
