[package]
name = "jellyfin-client"
version = "0.1.0"
edition = "2024"
description = "Async Rust client for the Jellyfin media server API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saratchandra/jellytui"
keywords = ["jellyfin", "media", "api", "client"]
categories = ["api-bindings", "multimedia"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[features]
default = ["native-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
